# missense-variant-effect-predictor

./: .gitignore  Dockerfile  README.md  README_ARCHITECTURE.md  app.py  clinvar_parse.py  docker-compose.yml  download_clinvar.py  environment.yml  features.py  load_clinvar.py  pyproject.toml
notebooks/: 00_raw.ipynb  01_data_exploration.ipynb  02_feature_engineering.ipynb  03_modeling.ipynb
